tests/parsing/smtlib/poly/errors/179_par_closing.psmt2
(set-logic ALL)
(declare-fun foo (par (A) () Bool _
