tests/parsing/smtlib/poly/errors/179_par_closing.expected
File "tests/parsing/smtlib/poly/errors/179_par_closing.psmt2", line 2, character 34-35:
2 | (declare-fun foo (par (A) () Bool _
                                      ^
Error while parsing a function declaration, read the reserved word '_',
      but expected two closing parenthesis.
